--- a/templates/legacy/rareSpell-partial.hbs
+++ b/templates/legacy/rareSpell-partial.hbs
@@ -1,8 +1,10 @@
-<div class='form-group input-select'>
-  <label>{{localize 'a5e-for-dnd5e.Spell.Rare'}}</label>
+<div class="form-group input-select">
+  <label data-tooltip="{{localize "a5e-for-dnd5e.Spell.Rare"}}">
+    {{localize "a5e-for-dnd5e.Spell.Rare"}}
+  </label>
   <input
-    type='checkbox'
-    name='flags.a5e-for-dnd5e.rareSpell'
+    type="checkbox"
+    name="flags.a5e-for-dnd5e.rareSpell"
     {{#unless editable}}disabled{{/unless}}
     {{checked rare}}
   />
